Fixed figcption font sizes and horizontal scroll bug

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
-/*
-font-family: 'Roboto', sans-serif;
-font-family: 'Roboto Mono', monospace;
-font-family: 'Roboto Condensed', sans-serif;
-font-family: 'Pacifico', cursive;
-*/
-
-
-/* TYPOGRAPHY */
+/* Typography */
 
 body {
     font-size: 18px;
@@ -45,8 +37,57 @@ p {
     margin-top: 2em;
 }
 
+figcaption {
+    font-family: 'Pacifico', cursive;
+    font-size: 1em;
+}
 
-/* ELEMENT */
+strong {
+    font-weight: 900;
+}
+
+@media only screen and (min-width: 660px) {
+    h1 {
+        font-size: 2em;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 1.7em;
+    }
+    p {
+        font-size: .7em;
+    }
+    figcaption {
+        font-size: .6em;
+    }
+}
+
+@media only screen and (min-width: 914px) {
+    h1 {
+        font-size: 1.7em;
+    }
+    p {
+        font-size: .6em;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    h2 {
+        font-size: .6em;
+    }
+    p {
+        font-size: .38em;
+    }
+}
+
+
+/* LAYOUT */
+
+.leftmost {
+    margin-left: 12.5%;
+}
 
 .icon_block {
     margin-top: 8em;
@@ -61,29 +102,14 @@ p {
 }
 
 figcaption {
-    font-family: 'Pacifico', cursive;
-    font-size: .6em;
     text-align: center;
     margin-top: 1em;
 }
-
-
-
-.col-sm-offset-3_5 {
-    margin-left: 12.5%;
-}
-
-
-/*MEDIA QUERIES*/
-
-
-/* Desktop */
 
 @media only screen and (min-width: 490px) {
     h1 {
         margin-top: 2em;
     }
-    
     .icon_block {
         margin-top: 6em;
     }
@@ -91,10 +117,8 @@ figcaption {
 
 @media only screen and (min-width: 660px) {
     h1 {
-        font-size: 2em;
         margin-top: 2em;
     }
-    
     .icon_block {
         margin-top: 4em;
     }
@@ -102,14 +126,7 @@ figcaption {
 
 @media only screen and (min-width: 768px) {
     h1 {
-        font-size: 1.7em;
-        margin-top: 2em;   
-    }
-    h2 {
-        /*font-size: .8em;*/
-    }
-    p {
-        font-size: .7em;
+        margin-top: 2em;
     }
     .icon_block {
         margin-top: 2em;
@@ -118,11 +135,7 @@ figcaption {
 
 @media only screen and (min-width: 914px) {
     h1 {
-        font-size: 1.7em;
         margin-top: 2.7em;
-    }
-    p {
-        font-size: .6em;
     }
 }
 
@@ -131,15 +144,10 @@ figcaption {
         margin-top: 1.8em;
     }
     h2 {
-        font-size: .6em;
         margin-top: 1.5em;
     }
     p {
-        font-size: .38em;
         margin-top: 3em;
-    }
-    .col-md-offset-3_5 {
-        margin-left: 31%;
     }
     .icon_block {
         margin-top: 3em;
@@ -149,9 +157,6 @@ figcaption {
 @media only screen and (min-width: 1200px) {
     h1 {
         margin-top: 1.8em;
-    }
-    .col-lg-offset-3_5 {
-        margin-left: 31%;
     }
     .icon_block {
         margin-top: 2.5em;
